--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,9 +7,11 @@ environment:
   sdk: ^3.8.1
 
 dependencies:
+  dio: ^5.8.0+1
   flutter:
     sdk: flutter
   flutter_dotenv: ^5.2.1
+  flutter_riverpod: ^2.6.1
   go_router: ^15.2.0
 
 dev_dependencies:
@@ -19,7 +21,6 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
-
 
   assets:
     - .env
